atualização no exercício 022

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -12,10 +12,17 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment 
+                */
+
+                background-color: black url('imagens/wallpaper002.jpg') center center cover fixed;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusamus placeat velit natus nesciunt? Ducimus magnam consectetur fuga et maiores quos debitis, ut iste fugit accusamus odio modi ipsam dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto nobis ab nemo mollitia eligendi! Possimus sed voluptatibus ratione officia atque harum velit maxime veniam eveniet fugit, natus est quidem corrupti? lorem</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusamus placeat velit natus nesciunt? Ducimus magnam consectetur fuga et maiores quos debitis, ut iste fugit accusamus odio modi ipsam dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto nobis ab nemo mollitia eligendi! Possimus sed voluptatibus ratione officia atque harum velit maxime veniam eveniet fugit, natus est quidem corrupti? lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi suscipit a tenetur quibusdam facilis aspernatur quo temporibus veritatis quisquam ratione in distinctio unde assumenda dolor numquam, error rerum at id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint tenetur facilis ex qui assumenda earum distinctio, molestias, eius similique quod aspernatur autem deserunt sequi laborum cumque expedita. Animi, quae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus debitis, ratione a tenetur dolor, non voluptatem facere deserunt exercitationem necessitatibus reprehenderit ad provident consequatur quaerat, aperiam doloremque quod incidunt quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate ratione, sed harum error modi recusandae minima! Deserunt deleniti, omnis, odio alias, id et ea provident nobis fugit expedita asperiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati amet eos nesciunt voluptatibus libero pariatur, ipsa quos quisquam facilis ad ex, doloribus, voluptate cum? Recusandae voluptates et reiciendis necessitatibus facilis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusamus placeat velit natus nesciunt? Ducimus magnam consectetur fuga et maiores quos debitis, ut iste fugit accusamus odio modi ipsam dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto nobis ab nemo mollitia eligendi! Possimus sed voluptatibus ratione officia atque harum velit maxime veniam eveniet fugit, natus est quidem corrupti? lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi suscipit a tenetur quibusdam facilis aspernatur quo temporibus veritatis quisquam ratione in distinctio unde assumenda dolor numquam, error rerum at id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint tenetur facilis ex qui assumenda earum distinctio, molestias, eius similique quod aspernatur autem deserunt sequi laborum cumque expedita. Animi, quae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus debitis, ratione a tenetur dolor, non voluptatem facere deserunt exercitationem necessitatibus reprehenderit ad provident consequatur quaerat, aperiam doloremque quod incidunt quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate ratione, sed harum error modi recusandae minima! Deserunt deleniti, omnis, odio alias, id et ea provident nobis fugit expedita asperiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati amet eos nesciunt voluptatibus libero pariatur, ipsa quos quisquam facilis ad ex, doloribus, voluptate cum? Recusandae voluptates et reiciendis necessitatibus facilis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus accusamus placeat velit natus nesciunt? Ducimus magnam consectetur fuga et maiores quos debitis, ut iste fugit accusamus odio modi ipsam dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto nobis ab nemo mollitia eligendi! Possimus sed voluptatibus ratione officia atque harum velit maxime veniam eveniet fugit, natus est quidem corrupti? lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi suscipit a tenetur quibusdam facilis aspernatur quo temporibus veritatis quisquam ratione in distinctio unde assumenda dolor numquam, error rerum at id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint tenetur facilis ex qui assumenda earum distinctio, molestias, eius similique quod aspernatur autem deserunt sequi laborum cumque expedita. Animi, quae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus debitis, ratione a tenetur dolor, non voluptatem facere deserunt exercitationem necessitatibus reprehenderit ad provident consequatur quaerat, aperiam doloremque quod incidunt quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore cupiditate ratione, sed harum error modi recusandae minima! Deserunt deleniti, omnis, odio alias, id et ea provident nobis fugit expedita asperiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati amet eos nesciunt voluptatibus libero pariatur, ipsa quos quisquam facilis ad ex, doloribus, voluptate cum? Recusandae voluptates et reiciendis necessitatibus facilis?</p>
     </main>
 </body>
 </html>
