--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://cursoemvideo.com" target="_blank">cursoemvideo</a>, copiado para escuro por Habacuc Maia</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://cursoemvideo.com" target="_blank">cursoemvideo</a>, copiado para estudo por Habacuc Maia</p>
     </footer>
 </body>
 </html>
