--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,9 +28,9 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, tempore. Laudantium natus dolore recusandae nesciunt eaque, vel excepturi quas dolorum obcaecati ut sequi. Asperiores ea corporis molestias eligendi ratione facere! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui a, veritatis commodi nihil, officia sint omnis nam maxime vero quidem alias unde non quasi? Hic accusantium nostrum fugit blanditiis ullam.</p>
 
-    <iframe id="tela" name="frame" src="">
-        <p>Infelizmente seu navegador não é compatível com isso.</p></iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit est rerum repellendus cupiditate eum obcaecati ab saepe sit dolorem, odio dolores officiis, possimus nobis exercitationem sequi quibusdam qui nihil non?</p><img src='imagens/cursoemvideo.png'>"></iframe>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus adipisci nam enim aspernatur similique? Ex voluptate corporis obcaecati consectetur modi ad quo perferendis nesciunt, deleniti culpa quasi! Quis, assumenda iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt est enim minus officiis, incidunt ad at eum maxime dicta dolores consequuntur veniam similique doloribus. Deserunt impedit ipsa libero iusto magnam.</p>
+        
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus adipisci nam enim aspernatur similique? Ex voluptate corporis obcaecati consectetur modi ad quo perferendis nesciunt, deleniti culpa quasi! Quis, assumenda iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt est enim minus officiis, incidunt ad at eum maxime dicta dolores consequuntur veniam similique doloribus. Deserunt impedit ipsa libero iusto magnam.</p>
 </body>
 </html>
