--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -6,7 +6,7 @@
     <title>Formulário</title>
 </head>
 <body>
-    <h1>Exeemplo de Formulário</h1>
+    <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Sexo</legend>
